--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 # Async-related libraries
 tokio = { version = "1.37.0", features = ["full"] }
 futures = "0.3.30"
+tower-async = "0.2.0"
 
 # error
 thiserror = "1.0.58"
