--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,12 @@ thiserror = "1.0.58"
 
 # serde
 serde_with = "3.8.1"
+serde_json = "1.0.116"
+serde_cbor = "0.11.2"
 serde = { version = "1.0.0", features = ["derive"] }
 
 # other
+scc = "2.1.1"
 arcstr = { version = "1.1.5", features = ["serde"] }
 
 # cryptography
