--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ serde = { version = "1.0.0", features = ["derive"] }
 
 # other
 scc = "2.1.1"
+zeroize = { version = "1.7.0", features = ["derive"] }
 arcstr = { version = "1.1.5", features = ["serde"] }
 
 # cryptography
