--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 # Async-related libraries
 tokio = { version = "1.37.0", features = ["full"] }
+tokio-util = "0.7.11"
 futures = "0.3.30"
 tower-async = "0.2.0"
 
